--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -692,19 +692,19 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \subsection{Experiment 1}\label{experiment-1-5}}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-teaching-1-1} \caption{\label{fig:ioi-teaching-1}BAA}\label{fig:plot-ioi-teaching-1}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-teaching-1-1} \caption{\label{fig:ioi-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). A dashed line represents the tempo given by a metronome. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-ioi-teaching-1}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-art-teaching-1-1} \caption{\label{fig:art-teaching-1}BAA}\label{fig:plot-art-teaching-1}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-art-teaching-1-1} \caption{\label{fig:art-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of KOT (ms) when playing the piece with articulation. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-art-teaching-1}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-teaching-1-1} \caption{\label{fig:dyn-teaching-1}BAA}\label{fig:plot-dyn-teaching-1}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-teaching-1-1} \caption{\label{fig:dyn-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of KV (0-127) when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-teaching-1}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-diff-teaching-1-1} \caption{\label{fig:dyn-diff-teaching-1}BAA}\label{fig:plot-dyn-diff-teaching-1}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-diff-teaching-1-1} \caption{\label{fig:dyn-diff-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of KV Difference at transition points when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-diff-teaching-1}
 \end{figure}
 
 \begin{table}[tbp]
@@ -712,7 +712,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:ioi-teaching-desc-1}Caption}
+\caption{\label{tab:ioi-teaching-desc-1}Experiment 1:}
 
 \begin{tabular}{lllllllll}
 \toprule
@@ -744,7 +744,7 @@ Teaching & Dynamics & No & 21 & 193.50 & 21.22 & 4.63 & 186.28 & 25.29\\
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:art-teaching-desc-1}Caption}
+\caption{\label{tab:art-teaching-desc-1}Experiment 1:}
 
 \begin{tabular}{llllllll}
 \toprule
@@ -776,7 +776,7 @@ Teaching & Articulation & Staccato & No & 21 & -136.84 & 21.52 & 4.70\\
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:dyn-teaching-desc-1}Caption}
+\caption{\label{tab:dyn-teaching-desc-1}Experiment 1:}
 
 \begin{tabular}{llllllll}
 \toprule
@@ -808,7 +808,7 @@ Teaching & Dynamics & Piano & No & 21 & 60.88 & 4.76 & 1.04\\
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:dyn-diff-teaching-desc-1}Caption}
+\caption{\label{tab:dyn-diff-teaching-desc-1}Experiment 1:}
 
 \begin{tabular}{llllllll}
 \toprule
@@ -841,19 +841,19 @@ Teaching & Dynamics & PtoF & No & 21 & 21.98 & 9.56 & 2.09\\
 \subsection{Experiment 2}\label{experiment-2-5}}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-teaching-2-1} \caption{\label{fig:ioi-teaching-2}BAA}\label{fig:plot-ioi-teaching-2}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-teaching-2-1} \caption{\label{fig:ioi-teaching-2}Experiment 2: Comparison between those with and without piano teaching experience in terms of IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). A dashed line represents the tempo given by a metronome. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-ioi-teaching-2}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-art-teaching-2-1} \caption{\label{fig:art-teaching-2}BAA}\label{fig:plot-art-teaching-2}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-art-teaching-2-1} \caption{\label{fig:art-teaching-2}Experiment 2:  Comparison between those with and without piano teaching experience in terms of KOT (ms) when playing the piece with articulation. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-art-teaching-2}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-teaching-2-1} \caption{\label{fig:dyn-teaching-2}BAA}\label{fig:plot-dyn-teaching-2}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-teaching-2-1} \caption{\label{fig:dyn-teaching-2}Experiment 2: Comparison between those with and without piano teaching experience in terms of KV (0-127) when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-teaching-2}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-diff-teaching-2-1} \caption{\label{fig:dyn-diff-teaching-2}BAA}\label{fig:plot-dyn-diff-teaching-2}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-diff-teaching-2-1} \caption{\label{fig:dyn-diff-teaching-2}Experiment 2: Comparison between those with and without piano teaching experience in terms of KV Difference at transition points when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-diff-teaching-2}
 \end{figure}
 
 \begin{table}[tbp]
@@ -861,7 +861,7 @@ Teaching & Dynamics & PtoF & No & 21 & 21.98 & 9.56 & 2.09\\
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:ioi-teaching-desc-2}Caption}
+\caption{\label{tab:ioi-teaching-desc-2}Experiment 2:}
 
 \begin{tabular}{lllllllll}
 \toprule
@@ -893,7 +893,7 @@ Teaching & Dynamics & No & 9 & 0.955 & 0.052 & 0.017 & 0.954 & 0.026\\
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:art-teaching-desc-2}Caption}
+\caption{\label{tab:art-teaching-desc-2}Experiment 2:}
 
 \begin{tabular}{llllllll}
 \toprule
@@ -925,7 +925,7 @@ Teaching & Articulation & Staccato & No & 9 & -0.749 & 0.073 & 0.024\\
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:dyn-teaching-desc-2}Caption}
+\caption{\label{tab:dyn-teaching-desc-2}Experiment 2:}
 
 \begin{tabular}{llllllll}
 \toprule
@@ -957,7 +957,7 @@ Teaching & Dynamics & Piano & No & 9 & 61.81 & 3.76 & 1.25\\
 \begin{center}
 \begin{threeparttable}
 
-\caption{\label{tab:dyn-diff-teaching-desc-2}Caption}
+\caption{\label{tab:dyn-diff-teaching-desc-2}Experiment 2:}
 
 \begin{tabular}{llllllll}
 \toprule
